--- a/app/index.html
+++ b/app/index.html
@@ -164,7 +164,7 @@
 
                 <!-- [+] .promo-block -->
                 <div class="promo-block">
-                    <p class="promo-text"><span>Атм</span>осфера</p>
+                    <span class="promo-text"><span>Атм</span>осфера</span>
                     <img class="promo-image" src="img/promo-img.jpg" height="253" width="977" alt="Атмосфера">
                 </div>
                 <!-- [-] .promo-block -->
@@ -192,7 +192,7 @@
                     <!-- [+] .page-content__main -->
                     <div class="page-content__main">
                         
-                        <p class="h1 uppercase">Именинники</p>
+                        <span class="h1 uppercase">Именинники</span>
 
                         <!-- [+] .top-content -->
                         <div class="top-content">
@@ -220,8 +220,8 @@
 
                                         <!-- [+] .text-wrapper -->
                                         <div class="text-wrapper">
-                                            <p class="name-text">Фамилия Имя Отчество</p>
-                                            <p class="text">Начальник Отдела гарантийного обслуживания</p>
+                                            <span class="name-text">Фамилия Имя Отчество</span>
+                                            <span class="text">Начальник Отдела гарантийного обслуживания</span>
                                         </div>
                                         <!-- [-] .text-wrapper -->
 
@@ -244,8 +244,8 @@
 
                                         <!-- [+] .text-wrapper -->
                                         <div class="text-wrapper">
-                                            <p class="name-text">Фамилия Имя Отчество</p>
-                                            <p class="text">Руководитель Отдела продаж ЗИП, расходных материалов и опций</p>
+                                            <span class="name-text">Фамилия Имя Отчество</span>
+                                            <span class="text">Руководитель Отдела продаж ЗИП, расходных материалов и опций</span>
                                         </div>
                                         <!-- [-] .text-wrapper -->
 
@@ -285,14 +285,14 @@
                                         <div class="img-wrapper">
                                             <img src="img/photo-template.jpg" height="131" width="137" alt="">
                                         </div>
-                                        <p class="person-name">Фамилия Имя Отчество</p>
+                                        <span class="person-name">Фамилия Имя Отчество</span>
                                     </div>
 
                                     <div class="future-content__item-person">
                                         <div class="img-wrapper">
                                             <img src="img/photo-template.jpg" alt="">
                                         </div>
-                                        <p class="person-name">Фамилия Имя Отчество</p>
+                                        <span class="person-name">Фамилия Имя Отчество</span>
                                     </div>
                                 </div>
                                 <!-- [-] .future-content__item-inner -->
@@ -315,14 +315,14 @@
                                         <div class="img-wrapper">
                                             <img src="img/photo-template.jpg" alt="">
                                         </div>
-                                        <p class="person-name">Фамилия Имя Отчество</p>
+                                        <span class="person-name">Фамилия Имя Отчество</span>
                                     </div>
 
                                     <div class="future-content__item-person">
                                         <div class="img-wrapper">
                                             <img src="img/photo-template.jpg" alt="">
                                         </div>
-                                        <p class="person-name">Фамилия Имя Отчество</p>
+                                        <span class="person-name">Фамилия Имя Отчество</span>
                                     </div>
                                 </div>
                                 <!-- [-] .future-content__item-inner -->
@@ -347,14 +347,14 @@
                                         <div class="img-wrapper">
                                             <img src="img/photo-template.jpg" alt="">
                                         </div>
-                                        <p class="person-name">Фамилия Имя Отчество</p>
+                                        <span class="person-name">Фамилия Имя Отчество</span>
                                     </div>
 
                                     <div class="future-content__item-person">
                                         <div class="img-wrapper">
                                             <img src="img/photo-template.jpg" alt="">
                                         </div>
-                                        <p class="person-name">Фамилия Имя Отчество</p>
+                                        <span class="person-name">Фамилия Имя Отчество</span>
                                     </div>
 
                                 </div>
@@ -393,7 +393,7 @@
                         <!-- [+] .side-list-wrapper -->
                         <div class="side-list-wrapper">
 
-                            <p class="side-list-header">Об АТМ</p>
+                            <span class="side-list-header">Об АТМ</span>
 
                             <!-- [+] .side-list -->
                             <ul class="side-list">
@@ -550,7 +550,7 @@
 
                     <div class="contacts to-right">
                         <span class="sup-phone-text">вопросы и предложения по порталу</span>
-                        <p class="phone-number">(812) 000-00-00</p>
+                        <span class="phone-number">(812) 000-00-00</span>
                     </div>
 
 
