transitions + eequal elements height

--- a/app/styles.html
+++ b/app/styles.html
@@ -333,7 +333,9 @@
 
                     <h4 class="h4">Таблица</h4>
 
-                    <table class="table">
+
+                    <!-- [+] .table2 -->
+                    <table class="table2">
 
                         <thead>
                             <tr>
@@ -367,6 +369,84 @@
                         </tbody>
 
                     </table>
+                    <!-- [-] .table2 -->
+
+
+                    <!-- [+] .table0 -->
+                    <table class="table0">
+
+                        <thead>
+                            <tr>
+                                <td>Head 1</td>
+                                <td>Head 2</td>
+                                <td>Head 3</td>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+                                <td>Cell 1</td>
+                                <td>Cell 2</td>
+                                <td>Cell 3</td>
+                            </tr>
+                            <tr>
+                                <td>Cell 1</td>
+                                <td>Cell 2</td>
+                                <td>Cell 3</td>
+                            </tr>
+                            <tr>
+                                <td>Cell 1</td>
+                                <td>Cell 2</td>
+                                <td>Cell 3</td>
+                            </tr>
+                            <tr>
+                                <td>Cell 1</td>
+                                <td>Cell 2</td>
+                                <td>Cell 3</td>
+                            </tr>
+                        </tbody>
+
+                    </table>
+                    <!-- [-] .table0 -->
+
+
+                    <!-- [+] .table1 -->
+                    <table class="table1">
+
+                        <thead>
+                            <tr>
+                                <td>Head 1</td>
+                                <td>Head 2</td>
+                                <td>Head 3</td>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+                                <td>Cell 1</td>
+                                <td>Cell 2</td>
+                                <td>Cell 3</td>
+                            </tr>
+                            <tr>
+                                <td>Cell 1</td>
+                                <td>Cell 2</td>
+                                <td>Cell 3</td>
+                            </tr>
+                            <tr>
+                                <td>Cell 1</td>
+                                <td>Cell 2</td>
+                                <td>Cell 3</td>
+                            </tr>
+                            <tr>
+                                <td>Cell 1</td>
+                                <td>Cell 2</td>
+                                <td>Cell 3</td>
+                            </tr>
+                        </tbody>
+
+                    </table>
+                    <!-- [-] .table1 -->
+
 
 
                 </div>
