radio & checkbox styles

--- a/app/index.html
+++ b/app/index.html
@@ -583,6 +583,8 @@
 
     <script type="text/javascript" src="js/jquery.bpopup.min.js"></script>
 
+    <script type="text/javascript" src="js/jquery.formstyler.min.js"></script>
+
     <script type="text/javascript" src="js/main.js"></script>
 
 
