head template chenge

--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,12 @@
 
     <link rel="stylesheet" href="css/styles.css">
 
-    <meta charset="UTF-8">
-    <title>Атмосфера</title>
+    <meta charset="utf-8">
+    <meta name="robots" content="{if $page.noindex}none{else}all{/if}">
+    <meta name="description" content="{$page.description}">
+    <meta name="keywords" content="{$page.keywords}">
+    <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
+    <title>{$page.title}</title>
 
 </head>
 <body>
